--- a/index.html
+++ b/index.html
@@ -22,31 +22,32 @@
 
            <div class="field">
 
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
-               <button class="fieldbox"></button>
+               <button class="fieldbox" onclick="clicked(1)" id="1"></button>
+               <button class="fieldbox" onclick="clicked(2)" id="2"></button>
+               <button class="fieldbox" onclick="clicked(3)" id="3"></button>
+               <button class="fieldbox" onclick="clicked(4)" id="4"></button>
+               <button class="fieldbox" onclick="clicked(5)" id="5"></button>
+               <button class="fieldbox" onclick="clicked(6)" id="6"></button>
+               <button class="fieldbox" onclick="clicked(7)" id="7"></button>
+               <button class="fieldbox" onclick="clicked(8)" id="8"></button>
+               <button class="fieldbox" onclick="clicked(9)" id="9"></button>
+               <button class="fieldbox" onclick="clicked(10)" id="10"></button>
+               <button class="fieldbox" onclick="clicked(11)" id="11"></button>
+               <button class="fieldbox" onclick="clicked(12)" id="12"></button>
+               <button class="fieldbox" onclick="clicked(13)" id="13"></button>
+               <button class="fieldbox" onclick="clicked(14)" id="14"></button>
+               <button class="fieldbox" onclick="clicked(15)" id="15"></button>
+               <button class="fieldbox" onclick="clicked(16)" id="16"></button>
+               <button class="fieldbox" onclick="clicked(17)" id="17"></button>
+               <button class="fieldbox" onclick="clicked(18)" id="18"></button>
+               <button class="fieldbox" onclick="clicked(19)" id="19"></button>
+               <button class="fieldbox" onclick="clicked(20)" id="20"></button>
+               <button class="fieldbox" onclick="clicked(21)" id="21"></button>
+               <button class="fieldbox" onclick="clicked(22)" id="22"></button>
+               <button class="fieldbox" onclick="clicked(23)" id="23"></button>
+               <button class="fieldbox" onclick="clicked(24)" id="24"></button>
+               <button class="fieldbox" onclick="clicked(25)" id="25"></button>
+               
         
 
      </div>   
