basic movement implemented

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     
            <h1> HazardHavoc </h1>
 
+           <output class = "status" id="stat"></output>
+
            <div class="field">
 
                <button class="fieldbox" onclick="clicked(1)" id="1"></button>
