Pre-major changes commit

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
      </div>   
     
      <output class = "status" id="stat"></output>
+     <!-- <div class="movablePlayer"></div> -->
 
 </body>
 
