--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      </div>   
     
      <output class = "status" id="stat"></output>
-     <!-- <div class="movablePlayer"></div> -->
+     <!-- <div class="movablePlayer" id="play"><img src = "playerred.svg" height="50px" width="50px"></div> -->
 
 </body>
 
